--- a/config.env
+++ b/config.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=8000
-BASE_URL=http://127.0.0.1:8000
+# BASE_URL=http://127.0.0.1:8000
+BASE_URL=https://restful-10ns.onrender.com/
 
 
 DB_URI=mongodb+srv://abdshekho:SIpf8tdbSbywsJvH@cluster0.qha4kcm.mongodb.net/ecommerce?retryWrites=true&w=majority
